gccida/c0/branch_prob
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1007:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *i_1; // [rsp+38h] [rbp-98h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1007:14: error: use of undeclared identifier 'i_1'
edge_info_0 *i_1; // [rsp+38h] [rbp-98h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1012:1: error: use of undeclared identifier 'edge_info_0'
edge_info_0 *inf; // [rsp+60h] [rbp-70h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1012:14: error: use of undeclared identifier 'inf'; did you mean 'if'?
edge_info_0 *inf; // [rsp+60h] [rbp-70h] 
             ^~~
             if
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1012:14: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1121:1: error: use of undeclared identifier 'branch_prob_ignore_next_note'
branch_prob_ignore_next_note = 1; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1125:6: error: use of undeclared identifier 'branch_prob_ignore_next_note'
if ( branch_prob_ignore_next_note ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1127:1: error: use of undeclared identifier 'branch_prob_ignore_next_note'
branch_prob_ignore_next_note = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1151:1: error: use of undeclared identifier 'inf'
inf = ( edge_info_0 *)e_1->aux; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1151:22: error: expected expression
inf = ( edge_info_0 *)e_1->aux; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1151:9: error: use of undeclared identifier 'edge_info_0'
inf = ( edge_info_0 *)e_1->aux; 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1152:48: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( e_1->flags & 0x10) != 0 && ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                               ^~~
                                               int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1152:48: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1152:78: error: use of undeclared identifier 'inf'; did you mean 'int'?
if ( ( e_1->flags & 0x10) != 0 && ( *( _BYTE *)inf & 4) == 0 && ( *( _BYTE *)inf & 2) == 0 ) 
                                                                             ^~~
                                                                             int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1152:78: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1154:12: error: use of undeclared identifier 'inf'; did you mean 'int'?
*( _BYTE *)inf = *( _BYTE *)inf & 0xFB | 4; 
           ^~~
           int
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1154:12: error: expected expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1194:22: error: expected expression
i_1 = ( edge_info_0 *)e_2a->aux; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/profile.c:1194:9: error: use of undeclared identifier 'edge_info_0'
i_1 = ( edge_info_0 *)e_2a->aux; 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/branch_prob/src/obj/profile.o] Error 1
